Bugfix: Corrected css width issue with browser scrollbar present

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -44,6 +44,10 @@
 
 
 //  the core html elements
+html {
+  scrollbar-width:  thin;
+}
+
 body {
   background:       $surface-section;
   color:            $surface-overlay;
