--- a/resources/sass/app/layouts/default/page.scss
+++ b/resources/sass/app/layouts/default/page.scss
@@ -6,8 +6,11 @@
   z-index:          1;
 
     .main.content {
+      margin-top:       $app-block-size;
       min-height:       calc(100vh - $app-block-size);
+      position:         relative;
       width:            100%;
+      z-index:          1;
 
         >.container {
           min-height:       calc(100vh - $app-block-size);
@@ -63,6 +66,8 @@
       display:          flex;
       flex-direction:   row;
       height:           $app-block-size;
+      position:         fixed;
+      z-index:          7;
 
         .block, .inline {
           align-items:      center;
